# ialloc

./: Cargo.toml  Readme.md  build.rs  rust-toolchain.toml
.github/workflows/: rust.yml
doc/: assumptions.md  features.md
examples/: alloc-tester.rs  malloc.rs  test-zero-allocs.rs
examples/nightly/: malloc.rs  stable-main-stub.rs
scripts/: build-thorough.cmd  build.cmd  doc.cmd  info-msrv.cmd  info-nightly.cmd  info-stable.cmd  stats.sh  test-msrv-i686.cmd  test-msrv-wsl.cmd  test-msrv.cmd  test-nightly.cmd  test-stable.cmd
src/: _ialloc.rs  _impls.rs  _macros.rs  align.rs  bug.rs  error.rs  layout.rs  nzst.rs  thin.rs  zsty.rs
src/align/: alignment.rs  alignn.rs  constants.rs
src/allocator/: _allocator.rs
src/allocator/adapt/: _adapt.rs  alloc_zst.rs  dangle_zst.rs  panic_over_align.rs
src/allocator/alloc/: _alloc.rs  global.rs
src/allocator/c/: _c.rs  _refs.md  aligned_malloc.rs  malloc.rs
src/allocator/cpp/: _cpp.rs  _refs.md  ffi.cpp  ffi.rs  new_delete.rs  new_delete_aligned.rs  new_delete_array.rs  new_delete_array_aligned.rs  std_allocator.rs
src/allocator/debug/: _debug.rs  null.rs
src/allocator/msvc/: _msvc.rs  _refs.md  aligned_malloc.rs
src/allocator/simple/: _simple.rs  bump.rs  fixed_pool.rs
src/allocator/win32/: _refs.md  _win32.rs  cotaskmem.rs  cryptmem.rs  global.rs  heap.rs  heap_no_serialize.rs  imalloc.rs  local.rs  virtual_.rs
src/auto/: _auto.rs  nzst_to_zsty.rs  thin_to_nzst.rs  thin_to_thin.rs
src/boxed/: _boxed.rs  abox.rs  abox_alloc.rs  abox_bytemuck.rs  abox_clone.rs  abox_cmp.rs  abox_convert_alloc_common.rs  abox_convert_alloc_global_oom.rs  abox_convert_alloc_no_global_oom.rs  abox_convert_infallible_.rs  abox_convert_infallible_alloc.rs  abox_convert_infallible_std.rs  abox_default.rs  abox_extend.rs  abox_fmt.rs  abox_io.rs  abox_iter.rs  abox_realloc.rs  abox_traits.rs  abox_traits_panicy.rs
src/traits/: _traits.rs  fat.rs  meta.rs  nzst.rs  thin.rs  zsty.rs
src/util/: _util.rs  align.rs  bytes.rs  drop.rs  nn.rs  slice.rs
src/values/: _values.rs  layoutnz.rs
src/vec/: _vec.rs  avec.rs  avec_clone.rs  avec_cmp.rs  avec_default.rs  avec_deref.rs  avec_extend.rs  avec_fmt.rs  avec_from.rs  avec_index.rs  avec_io.rs  avec_iter.rs  avec_retain.rs  avec_traits.rs
