# https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name                        = "ialloc"
version                     = "0.0.0-2023-05-04"
edition                     = "2021"
rust-version                = "1.69.0" # MSRV: CARGO_BIN_NAME in examples/nightly/stable-main-stub.rs

license                     = "Apache-2.0 OR MIT"
authors                     = ["MaulingMonkey <git@maulingmonkey.com>"]
repository                  = "https://github.com/MaulingMonkey/ialloc"
documentation               = "https://docs.rs/ialloc"

readme                      = "Readme.md"
description                 = "Allocator interface traits"
categories                  = ["memory-management", "no-std::no-alloc"] # https://crates.io/category_slugs
#keywords                    = ["..."]
build                       = "build/build.rs"

[lib]
path                        = "src/_ialloc.rs"

[features]
default                     = ["alloc", "c89", "c++17", "win32", "msvc"]
nightly                     = [] # should have no effect on anything but examples

alloc                       = []
win32                       = ["winapi"]
msvc                        = []

#c23                         = ["c17"] # not yet standardized
c17                         = ["c11"]
c11                         = ["c99"]
c99                         = ["c89"]
c89                         = ["c"]
c                           = ["libc"]

"c++23"                     = ["c++20"]
"c++20"                     = ["c++17"]
"c++17"                     = ["c++14"]
"c++14"                     = ["c++11"]
"c++11"                     = ["c++03"]
"c++03"                     = ["c++98"]
"c++98"                     = ["c++"]
"c++"                       = ["cc"]

[build-dependencies]
cc.version                  = "1"
cc.optional                 = true

[dependencies]
libc.version                = "0.2"
libc.optional               = true
winapi.version              = "0.3"
winapi.optional             = true
winapi.features = [
    # shared

    # um
    "combaseapi",
    "errhandlingapi",
    "heapapi",
    "minwinbase",
    "winbase",
    "wincrypt",
    "winnt",
]
